fix awful dumb chrome flicker css bug

--- a/biblio-client/src/styles/_variables.scss
+++ b/biblio-client/src/styles/_variables.scss
@@ -1,1 +1,14 @@
 $navigation-height: 60px;
+
+
+$color-primary: #7A1103 !default;
+$color-alert: #C62D19 !default;
+$color-info: #092247 !default;
+$color-success: #6B8711 !default;
+$color-link: #002147 !default;
+$light-gray: #DDD !default;
+
+$base-background-color: white !default;
+$dark-gray: #333 !default;
+
+$base-font-color: $dark-gray !default;
