--- a/biblio-client/src/styles/biblio/components/_shelf.scss
+++ b/biblio-client/src/styles/biblio/components/_shelf.scss
@@ -3,12 +3,8 @@
 }
 
 .bb-shelf-container {
-  $base-background-color: white !default;
-  $dark-gray: #333 !default;
-  $light-gray: #DDD !default;
   $medium-screen: 40em !default;
   $large-screen: 53.75em !default;
-  $base-font-color: $dark-gray !default;
   $grid-items-background: $base-background-color;
   $grid-item-background: $base-background-color;
   $grid-item-border: 1px solid transparentize($base-font-color, 0.8);
@@ -17,7 +13,6 @@
   $grid-item-color: $base-font-color;
 
   @include clearfix;
-  position: relative;
 
   @include media($large-screen) {
     height: calc(100% - #{$navigation-height});
