--- a/biblio-client/src/styles/refills/_navbar.scss
+++ b/biblio-client/src/styles/refills/_navbar.scss
@@ -1,18 +1,14 @@
 header.navigation {
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
-  $action-color: #477DCA !default;
-  $dark-gray: #333 !default;
   $large-screen: 53.75em !default;
   $navigation-padding: 1em;
-  $navigation-background: #852E03;
+  $navigation-background: $color-primary;
   $navigation-color: transparentize(white, 0.3);
   $navigation-color-hover: white;
-  $navigation-nav-button-background: $action-color;
+  $navigation-nav-button-background: $color-link;
   $navigation-nav-button-background-hover: lighten($navigation-background, 10%);
   $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20%);
-  $navigation-search-background: lighten($navigation-background, 5);
-  $navigation-search-border: 1px solid darken($navigation-background, 5);
   $navigation-active-link-color: transparentize(white, 0.5);
   $navigation-submenu-padding: 1em;
   $navigation-submenu-width: 12em;
@@ -58,8 +54,8 @@ header.navigation {
       display: none;
     }
 
-    &:focus,
-    &:hover {
+    &:hover,
+    &:focus {
       color: $navigation-color-hover;
     }
   }
@@ -125,8 +121,8 @@ header.navigation {
         padding-right: 1em;
       }
 
-      &:focus,
-      &:hover {
+      &:hover,
+      &:focus {
         color: $navigation-color-hover;
       }
     }
@@ -189,8 +185,8 @@ header.navigation {
       }
     }
 
-    &:focus > .submenu,
-    &:hover > .submenu {
+    &:hover > .submenu,
+    &:focus > .submenu {
       display: block;
     }
 
@@ -278,68 +274,6 @@ header.navigation {
       background: transparent;
       clear: none;
       float: right;
-    }
-  }
-
-  // Search bar
-
-  .search-bar {
-    $search-bar-border-color: $base-border-color;
-    $search-bar-border: 1px solid $search-bar-border-color;
-    $search-bar-background: lighten($search-bar-border-color, 10%);
-
-    float: left;
-    padding: 0.85em 0.85em 0.7em 0.6em;
-    width: 60%;
-
-    form {
-      position: relative;
-
-      input[type=search] {
-        background: $navigation-search-background;
-        border: $navigation-search-border;
-        border-radius: $base-border-radius * 2;
-        box-sizing: border-box;
-        color: $navigation-color;
-        font-size: 0.9em;
-        font-style: italic;
-        margin: 0;
-        padding: 0.5em 0.8em;
-        width: 100%;
-
-        @include media($horizontal-bar-mode) {
-          width: 100%;
-        }
-      }
-
-      button[type=submit] {
-        background: $navigation-search-background;
-        border: 0;
-        bottom: 0.3em;
-        left: auto;
-        outline: none;
-        padding: 0 9px;
-        position: absolute;
-        right: 0.3em;
-        top: 0.3em;
-
-        img {
-          height: 12px;
-          opacity: 0.7;
-          padding: 1px;
-        }
-      }
-    }
-
-    @include media($horizontal-bar-mode) {
-      display: inline-block;
-      position: relative;
-      width: 16em;
-
-      input {
-        box-sizing: border-box;
-        display: block;
-      }
     }
   }
 }
